Resolve "New SentryEventConverter"