@@ -1,26 +1,28 @@
-package ru.kontur.vostok.hercules.sentry.sink.converters;
-
-import io.sentry.event.Event;
-import io.sentry.event.interfaces.ExceptionInterface;
-import io.sentry.event.interfaces.SentryException;
-import io.sentry.event.interfaces.SentryStackTraceElement;
-import io.sentry.event.interfaces.UserInterface;
+import io.sentry.SentryEvent;
+import io.sentry.protocol.Contexts;
+import io.sentry.protocol.Device;
+import io.sentry.protocol.SentryException;
+import io.sentry.protocol.SentryStackFrame;
+import io.sentry.protocol.SentryStackTrace;
+import io.sentry.protocol.User;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.UUID;
+import org.jetbrains.annotations.NotNull;
 import org.junit.Assert;
 import org.junit.Test;
 import ru.kontur.vostok.hercules.protocol.Container;
+import ru.kontur.vostok.hercules.protocol.EventBuilder;
 import ru.kontur.vostok.hercules.protocol.Variant;
 import ru.kontur.vostok.hercules.protocol.Vector;
-import ru.kontur.vostok.hercules.protocol.EventBuilder;
-import ru.kontur.vostok.hercules.sentry.client.impl.v9.SentryEventConverterImplV9;
+import ru.kontur.vostok.hercules.sentry.client.impl.SentryEventConverterImpl;
 import ru.kontur.vostok.hercules.tags.CommonTags;
 import ru.kontur.vostok.hercules.tags.ExceptionTags;
 import ru.kontur.vostok.hercules.tags.LogEventTags;
 import ru.kontur.vostok.hercules.tags.SentryTags;
 import ru.kontur.vostok.hercules.tags.StackFrameTags;
-
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
 
 /**
  * @author Petr Demenev
@@ -30,7 +32,7 @@ public class SentryEventConverterTest {
     private static final String someUuid = "00000000-0000-1000-994f-8fcf383f0000";
     private static final String platformFromStacktrace = "java";
 
-    private static final SentryEventConverterImplV9 SENTRY_EVENT_CONVERTER = new SentryEventConverterImplV9("0.0.0");
+    private static final SentryEventConverterImpl SENTRY_EVENT_CONVERTER = new SentryEventConverterImpl("0.0.0");
 
     private static Container createException() {
         return Container.builder()
@@ -63,9 +65,10 @@ public class SentryEventConverterTest {
                 .tag(LogEventTags.MESSAGE_TAG.getName(), Variant.ofString(message))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertEquals(message, sentryEvent.getMessage());
+        Assert.assertNotNull(sentryEvent.getMessage());
+        Assert.assertEquals(message, sentryEvent.getMessage().getMessage());
     }
 
     @Test
@@ -75,31 +78,32 @@ public class SentryEventConverterTest {
                 .tag(LogEventTags.EXCEPTION_TAG.getName(), Variant.ofContainer(createException()))
                 .build();
 
-        Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        ExceptionInterface exceptionInterface = (ExceptionInterface) sentryEvent.getSentryInterfaces().get("sentry.interfaces.Exception");
-        SentryException exception = exceptionInterface.getExceptions().getFirst();
+        Assert.assertNotNull(sentryEvent.getExceptions());
+        SentryException exception = sentryEvent.getExceptions().get(0);
 
-        Assert.assertEquals("Some error of ExceptionClass happened", exception.getExceptionMessage());
-        Assert.assertEquals("ExceptionClass", exception.getExceptionClassName());
-        Assert.assertEquals("com.example.test.exceptions", exception.getExceptionPackageName());
+        Assert.assertEquals("Some error of ExceptionClass happened", exception.getValue());
+        Assert.assertEquals("com.example.test.exceptions.ExceptionClass", exception.getType());
 
-        SentryStackTraceElement[] stackTrace = exception.getStackTraceInterface().getStackTrace();
-        Assert.assertEquals(2, stackTrace.length);
+        SentryStackTrace stackTrace = exception.getStacktrace();
+        Assert.assertNotNull(stackTrace);
+        Assert.assertNotNull(stackTrace.getFrames());
+        Assert.assertEquals(2, stackTrace.getFrames().size());
 
-        Assert.assertEquals("com.example.test.SomeModule", stackTrace[0].getModule());
-        Assert.assertEquals("function", stackTrace[0].getFunction());
-        Assert.assertEquals("SomeModule.java", stackTrace[0].getFileName());
-        Assert.assertEquals(100, stackTrace[0].getLineno());
-        Assert.assertEquals(12, (int) stackTrace[0].getColno());
-        Assert.assertEquals("SomeModule.java", stackTrace[0].getAbsPath());
+        SentryStackFrame stackFrame = stackTrace.getFrames().get(0);
+        Assert.assertEquals("com.example.test.SomeModule", stackTrace.getFrames().get(0).getPackage());
+        Assert.assertEquals("function", stackFrame.getFunction());
+        Assert.assertEquals("SomeModule.java", stackFrame.getFilename());
+        Assert.assertEquals(Integer.valueOf(100), stackFrame.getLineno());
+        Assert.assertEquals(Integer.valueOf(12), stackFrame.getColno());
 
-        Assert.assertEquals("com.example.test.AnotherModule", stackTrace[1].getModule());
-        Assert.assertEquals("function", stackTrace[1].getFunction());
-        Assert.assertEquals("AnotherModule.java", stackTrace[1].getFileName());
-        Assert.assertEquals(200, stackTrace[1].getLineno());
-        Assert.assertEquals(13, (int) stackTrace[1].getColno());
-        Assert.assertEquals("AnotherModule.java", stackTrace[1].getAbsPath());
+        stackFrame = stackTrace.getFrames().get(1);
+        Assert.assertEquals("com.example.test.AnotherModule", stackFrame.getPackage());
+        Assert.assertEquals("function", stackFrame.getFunction());
+        Assert.assertEquals("AnotherModule.java", stackFrame.getFilename());
+        Assert.assertEquals(Integer.valueOf(200), stackFrame.getLineno());
+        Assert.assertEquals(Integer.valueOf(13), stackFrame.getColno());
     }
 
     @Test
@@ -109,7 +113,7 @@ public class SentryEventConverterTest {
                 .tag(LogEventTags.EXCEPTION_TAG.getName(), Variant.ofContainer(createException()))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         Assert.assertEquals(platformFromStacktrace, sentryEvent.getPlatform());
     }
@@ -122,7 +126,7 @@ public class SentryEventConverterTest {
                 .tag(CommonTags.PROPERTIES_TAG.getName(), Variant.ofContainer(Container.empty()))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         Assert.assertEquals(platformFromStacktrace, sentryEvent.getPlatform());
     }
@@ -147,14 +151,16 @@ public class SentryEventConverterTest {
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         Assert.assertEquals(traceId, sentryEvent.getTransaction());
-        Assert.assertEquals(traceId, sentryEvent.getTags().get("traceId"));
+        Assert.assertEquals(traceId, sentryEvent.getTag("traceId"));
         Assert.assertEquals(release, sentryEvent.getRelease());
-        Assert.assertTrue(sentryEvent.getFingerprint().contains(fingerprintWord1));
-        Assert.assertTrue(sentryEvent.getFingerprint().contains(fingerprintWord2));
-        Assert.assertEquals(2, sentryEvent.getFingerprint().size());
+
+        Assert.assertNotNull(sentryEvent.getFingerprints());
+        Assert.assertTrue(sentryEvent.getFingerprints().get(0).contains(fingerprintWord1));
+        Assert.assertTrue(sentryEvent.getFingerprints().get(1).contains(fingerprintWord2));
+        Assert.assertEquals(2, sentryEvent.getFingerprints().size());
         Assert.assertEquals(platform.toLowerCase(), sentryEvent.getPlatform());
         Assert.assertEquals(logger, sentryEvent.getLogger());
     }
@@ -167,10 +173,11 @@ public class SentryEventConverterTest {
                 .tag(LogEventTags.MESSAGE_TEMPLATE_TAG.getName(), Variant.ofString(messageTemplate))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertTrue(sentryEvent.getFingerprint().contains(messageTemplate));
-        Assert.assertEquals(1, sentryEvent.getFingerprint().size());
+        Assert.assertNotNull(sentryEvent.getFingerprints());
+        Assert.assertTrue(sentryEvent.getFingerprints().get(0).contains(messageTemplate));
+        Assert.assertEquals(1, sentryEvent.getFingerprints().size());
     }
 
     @Test
@@ -182,9 +189,9 @@ public class SentryEventConverterTest {
                 .tag(LogEventTags.EXCEPTION_TAG.getName(), Variant.ofContainer(createException()))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertNull(sentryEvent.getFingerprint());
+        Assert.assertNull(sentryEvent.getFingerprints());
     }
 
     @Test
@@ -198,10 +205,11 @@ public class SentryEventConverterTest {
                         Container.of(SentryTags.FINGERPRINT_TAG.getName(), Variant.ofVector(Vector.ofStrings(fingerprint)))))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertTrue(sentryEvent.getFingerprint().contains(fingerprint));
-        Assert.assertEquals(1, sentryEvent.getFingerprint().size());
+        Assert.assertNotNull(sentryEvent.getFingerprints());
+        Assert.assertTrue(sentryEvent.getFingerprints().contains(fingerprint));
+        Assert.assertEquals(1, sentryEvent.getFingerprints().size());
     }
 
     @Test
@@ -214,7 +222,7 @@ public class SentryEventConverterTest {
                         Container.of(SentryTags.PLATFORM_TAG.getName(), Variant.ofString(unknownPlatform))))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         Assert.assertEquals(platformFromStacktrace, sentryEvent.getPlatform());
     }
@@ -244,16 +252,19 @@ public class SentryEventConverterTest {
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        UserInterface userInterface = (UserInterface) sentryEvent.getSentryInterfaces().get("sentry.interfaces.User");
-        Assert.assertEquals(id, userInterface.getId());
-        Assert.assertEquals(username, userInterface.getUsername());
-        Assert.assertEquals(ipAddress, userInterface.getIpAddress());
-        Assert.assertEquals(email, userInterface.getEmail());
-        Assert.assertEquals(someString, userInterface.getData().get("my_field"));
-        Assert.assertEquals(uuid, userInterface.getData().get("UUID"));
-        Assert.assertEquals("null", userInterface.getData().get("null"));
+        User user= sentryEvent.getUser();
+        Assert.assertNotNull(user);
+        Assert.assertEquals(id, user.getId());
+        Assert.assertEquals(username, user.getUsername());
+        Assert.assertEquals(ipAddress, user.getIpAddress());
+        Assert.assertEquals(email, user.getEmail());
+
+        Assert.assertNotNull(user.getUnknown());
+        Assert.assertEquals(someString, user.getUnknown().get("my_field"));
+        Assert.assertEquals(uuid, user.getUnknown().get("UUID"));
+        Assert.assertEquals("null", user.getUnknown().get("null"));
     }
 
     @Test
@@ -265,6 +276,7 @@ public class SentryEventConverterTest {
         final String someString = "my String";
         final UUID uuid = UUID.randomUUID();
         final int number = 25;
+        final Date date = new Date();
 
         final ru.kontur.vostok.hercules.protocol.Event event = EventBuilder
                 .create(0, someUuid)
@@ -277,20 +289,50 @@ public class SentryEventConverterTest {
                         .tag("os.int", Variant.ofInteger(number))
                         .tag("os.UUID", Variant.ofUuid(uuid))
                         .tag("os.null", Variant.ofNull())
+                        .tag("device.charging", Variant.ofString("true"))
+                        .tag("device.online", Variant.ofInteger(1))
+                        .tag("device.simulator", Variant.ofString("yes"))
+                        .tag("device.memory_size", Variant.ofLong(43L))
+                        .tag("device.free_memory", Variant.ofInteger(32))
+                        .tag("device.usable_memory", Variant.ofString("14K"))
+                        .tag("device.screen_width_pixels", Variant.ofInteger(640))
+                        .tag("device.screen_height_pixels", Variant.ofLong(Long.MAX_VALUE))
+                        .tag("device.screen_dpi", Variant.ofString("300dpi"))
+                        .tag("app.app_start_time", Variant.ofString(date.toInstant().toString()))
                         .build()
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Map<String, Map<String, Object>> contexts = sentryEvent.getContexts();
-        Assert.assertEquals(name, contexts.get("browser").get("name"));
-        Assert.assertEquals(version, contexts.get("browser").get("version"));
-        Assert.assertEquals(rawDescription, contexts.get("os").get("raw_description"));
-        Assert.assertTrue((boolean) contexts.get("os").get("rooted"));
-        Assert.assertEquals(someString, contexts.get("os").get("my_field"));
-        Assert.assertEquals(uuid, contexts.get("os").get("UUID"));
-        Assert.assertEquals("null", contexts.get("os").get("null"));
+        @NotNull Contexts contexts = sentryEvent.getContexts();
+        Assert.assertEquals(name, Objects.requireNonNull(contexts.getBrowser()).getName());
+        Assert.assertEquals(version, contexts.getBrowser().getVersion());
+        Assert.assertEquals(rawDescription, Objects.requireNonNull(contexts.getOperatingSystem()).getRawDescription());
+        Assert.assertEquals(someString, Objects.requireNonNull(
+                contexts.getOperatingSystem().getUnknown()).get("my_field"));
+        Assert.assertEquals(uuid, contexts.getOperatingSystem().getUnknown().get("UUID"));
+        Assert.assertEquals(true, contexts.getOperatingSystem().isRooted());
+        Assert.assertEquals("null", contexts.getOperatingSystem().getUnknown().get("null"));
+
+        Device device = contexts.getDevice();
+        Assert.assertNotNull(device);
+        Assert.assertEquals(true, device.isCharging());
+        Assert.assertEquals(true, device.isOnline());
+        Assert.assertNull(device.isSimulator());
+        Assert.assertNotNull(device.getUnknown());
+        Assert.assertEquals("yes", device.getUnknown().get("simulator"));
+        Assert.assertEquals(Long.valueOf(43), device.getMemorySize());
+        Assert.assertEquals(Long.valueOf(32), device.getFreeMemory());
+        Assert.assertNull(device.getUsableMemory());
+        Assert.assertEquals("14K", device.getUnknown().get("usable_memory"));
+        Assert.assertEquals(Integer.valueOf(640), device.getScreenWidthPixels());
+        Assert.assertNull(device.getScreenHeightPixels());
+        Assert.assertEquals(Long.MAX_VALUE, device.getUnknown().get("screen_height_pixels"));
+        Assert.assertNull(device.getScreenDpi());
+        Assert.assertEquals("300dpi", device.getUnknown().get("screen_dpi"));
+        Assert.assertNotNull(contexts.getApp());
+        Assert.assertEquals(date, contexts.getApp().getAppStartTime());
     }
 
     @Test
@@ -312,13 +354,13 @@ public class SentryEventConverterTest {
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertEquals(stringValue, sentryEvent.getTags().get("my_string_tag"));
-        Assert.assertEquals(String.valueOf(longValue), sentryEvent.getTags().get("my_long_tag"));
-        Assert.assertEquals(String.valueOf(booleanValue), sentryEvent.getTags().get("my_boolean_tag"));
-        Assert.assertEquals(String.valueOf(uuid), sentryEvent.getTags().get("my_UUID_tag"));
-        Assert.assertEquals("null", sentryEvent.getTags().get("my_null_tag"));
+        Assert.assertEquals(stringValue, sentryEvent.getTag("my_string_tag"));
+        Assert.assertEquals(String.valueOf(longValue), sentryEvent.getTag("my_long_tag"));
+        Assert.assertEquals(String.valueOf(booleanValue), sentryEvent.getTag("my_boolean_tag"));
+        Assert.assertEquals(String.valueOf(uuid), sentryEvent.getTag("my_UUID_tag"));
+        Assert.assertEquals("null", sentryEvent.getTag("my_null_tag"));
     }
 
     @Test
@@ -335,13 +377,13 @@ public class SentryEventConverterTest {
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         final String expectedStringValue = "The source string is longer than 200 characters " +
                 "and contains line feed characters and whitespaces at the beginning and end. " +
                 "123456789_123456789_123456789_123456789_123456789_123456789_123456789_123456";
-        Assert.assertEquals(expectedStringValue, sentryEvent.getTags().get("my_string_tag"));
-        Assert.assertEquals(200, sentryEvent.getTags().get("my_string_tag").length());
+        Assert.assertEquals(expectedStringValue, sentryEvent.getTag("my_string_tag"));
+        Assert.assertEquals(200, Objects.requireNonNull(sentryEvent.getTag("my_string_tag")).length());
     }
 
     @Test
@@ -358,9 +400,9 @@ public class SentryEventConverterTest {
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
-        Assert.assertEquals("[empty]", sentryEvent.getTags().get("my_string_tag_1"));
-        Assert.assertEquals("[empty]", sentryEvent.getTags().get("my_string_tag_2"));
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        Assert.assertEquals("[empty]", sentryEvent.getTag("my_string_tag_1"));
+        Assert.assertEquals("[empty]", sentryEvent.getTag("my_string_tag_2"));
     }
 
     @Test
@@ -374,11 +416,11 @@ public class SentryEventConverterTest {
                                 Container.of("my_string", Variant.ofString(stringValue))))))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         Assert.assertEquals(
                 stringValue,
-                ((Map) sentryEvent.getExtra().get("my_extra")).get("my_string")
+                ((Map<?,?>) Objects.requireNonNull(sentryEvent.getExtra("my_extra"))).get("my_string")
         );
     }
 
@@ -393,10 +435,10 @@ public class SentryEventConverterTest {
                         Container.of("my_extra", Variant.ofVector(Vector.ofStrings(stringValue1, stringValue2)))))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("my_extra")).contains(stringValue1));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("my_extra")).contains(stringValue2));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("my_extra"))).contains(stringValue1));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("my_extra"))).contains(stringValue2));
     }
 
     @Test
@@ -423,15 +465,17 @@ public class SentryEventConverterTest {
                 ))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("byte_vector")).contains(byteValue));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("short_vector")).contains(shortValue));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("int_vector")).contains(intValue));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("long_vector")).contains(longValue));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("flag_vector")).contains(flagValue));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("float_vector")).contains(floatValue));
-        Assert.assertTrue(((List) sentryEvent.getExtra().get("double_vector")).contains(doubleValue));
+        Assert.assertNotNull(sentryEvent.getExtra("byte_vector"));
+
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("byte_vector"))).contains(byteValue));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("short_vector"))).contains(shortValue));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("int_vector"))).contains(intValue));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("long_vector"))).contains(longValue));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("flag_vector"))).contains(flagValue));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("float_vector"))).contains(floatValue));
+        Assert.assertTrue(((List<?>) Objects.requireNonNull(sentryEvent.getExtra("double_vector"))).contains(doubleValue));
     }
 
     @Test
@@ -444,7 +488,7 @@ public class SentryEventConverterTest {
                         Container.of(SentryTags.TRACE_ID_TAG.getName(), Variant.ofUuid(uuid))))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
         Assert.assertEquals(uuid.toString(), sentryEvent.getTransaction());
     }
@@ -459,9 +503,10 @@ public class SentryEventConverterTest {
                         Container.of(SentryTags.FINGERPRINT_TAG.getName(), Variant.ofString(fingerprint))))
                 .build();
 
-        final Event sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
+        final SentryEvent sentryEvent = SENTRY_EVENT_CONVERTER.convert(event).getSentryEvent();
 
-        Assert.assertEquals(fingerprint, sentryEvent.getFingerprint().get(0));
-        Assert.assertEquals(1, sentryEvent.getFingerprint().size());
+        Assert.assertNotNull(sentryEvent.getFingerprints());
+        Assert.assertEquals(fingerprint, sentryEvent.getFingerprints().get(0));
+        Assert.assertEquals(1, sentryEvent.getFingerprints().size());
     }
 }
